deployments/epp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epp-node
  namespace: epp
  labels:
    app: epp-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epp-node
  template:
    metadata:
      namespace: epp
      labels:
        app: epp-node
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: epp-node
        image: ghcr.io/elifesciences/enhanced-preprints:master-9bfa6676-20220908.1434 # {"$imagepolicy": "epp:epp-node-prototype"}
        resources:
          requests:
            cpu: "200m"
          limits:
            memory: "2Gi"
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: articles-data
          mountPath: /opt/articles-data
      - name: git-sync
        image: k8s.gcr.io/git-sync/git-sync:v3.5.0
        resources:
          requests:
            cpu: "20m"
          limits:
            memory: "100Mi"
        volumeMounts:
        - name: articles-data
          mountPath: /articles
      volumes:
      - name: articles-data
        emptyDir: {}
