deployments/epp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epp-client
  namespace: epp
spec:
  rules:
  - host: staging--epp.elifesciences.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: epp-client
            port:
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: epp-node-http
            port:
              number: 3000
      - pathType: Prefix
        path: "/iiif"
        backend:
          service:
            name: epp-image-server
            port:
              number: 8182
